# recategorize

./: ChangeLog.md  recategorize.cabal
src/: .dir-locals.el  Category.hs  Functor.hs
