name:                recategorize
version:             0.1.0.0
synopsis:            Re-implementing category theory
-- description:         
homepage:            https://github.com/ttuegel/recategorize
license:             LGPL-3
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@mailbox.org
-- copyright:           
category:            Control
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Category
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
  hs-source-dirs:      src
  default-language:    Haskell2010
